[#33] Improve encapsulation of CardStack